--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,14 @@ body {
   box-shadow: 0 0 10px rgba(106, 13, 173, 0.4);
 }
 
+.nav-profile-btn
+{
+  height: 55px;
+  width: 55px;
+  border-radius: 50%;
+  border: 2px solid #b38cff;
+}
+
 .navbar-right {
   display: flex;
   gap: 2rem;
@@ -111,4 +119,74 @@ body {
   color: white;
   transform: translateY(-50%) scale(1.15);
   box-shadow: 0 0 12px rgba(179, 140, 255, 0.8);
+}
+
+.game-container
+{
+  margin-top: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  height: 600px;
+  width: 800px;
+  background-color: #313131;
+  border: 2px solid #b38cff;
+}
+
+.game-button
+{
+  background-color: #b38cff;
+  display: inline-block;
+  padding: 15px 25px;
+  font-size: 24px;
+  cursor: pointer;
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 0 9px #999;
+}
+
+.game-button:hover
+{
+  background: #7c64ad;
+}
+.game-button:active {
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+
+
+/* BLACKJACK STYLE */
+
+body {
+    font-family: "Segoe UI", Arial, sans-serif;
+    text-align: center;
+}
+
+#dealer-cards img {
+    height: 175px;
+    width: 125px;
+    margin: 1px;
+}
+
+#your-cards img {
+    height: 175px;
+    width: 125px;
+    margin: 1px;
+}
+
+#hit {
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
+}
+
+#stay {
+    width: 100px;
+    height: 50px;
+    font-size: 20px;
 }
