--- a/css/style.css
+++ b/css/style.css
@@ -127,9 +127,29 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
-  height: 600px;
+  transform: translate(-20%, -50%);
+  height: 700px;
   width: 800px;
+  background-color: #313131;
+  border: 2px solid #b38cff;
+}
+
+.game-container.disabled
+{
+  opacity: 0.6;
+  cursor: not-allowed;
+}
+
+.bet-container
+{
+  margin-top: 40px;
+  align-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-150%, -50%);
+  height: 700px;
+  width: 400px;
   background-color: #313131;
   border: 2px solid #b38cff;
 }
@@ -158,6 +178,10 @@ body {
   transform: translateY(4px);
 }
 
+.game-button.disabled {
+  opacity: 0.6;
+  cursor: not-allowed;
+}
 
 
 /* BLACKJACK STYLE */
