--- a/css/style.css
+++ b/css/style.css
@@ -155,6 +155,74 @@ body {
   border: 2px solid #b38cff;
 }
 
+.profile-layout {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 30px;
+    gap: -3px;
+}
+
+.profile-container {
+    position: relative;
+    width: 1200px;
+    height: 700px;
+
+    margin: 30px 0;
+
+    background: #2a2a2a;
+    border: 2px solid #b38cff;
+    overflow: visible;
+    padding: 30px;
+
+    display: flex;
+    flex-direction: row;
+}
+
+.profile-sidebar {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 40px;
+    margin-left: 20px;
+}
+
+.profile-tab {
+    padding: 12px 20px;
+    background: #3a3a3a;
+    color: #e6d8ff;
+    border: 1px solid rgba(255,255,255,0.15);
+    cursor: pointer;
+    transition: 0.15s ease;
+}
+
+.profile-tab:hover {
+    background: #4a3d68;
+}
+
+.profile-tab.active {
+    background: #7a58c2;
+    border-color: #b38cff;
+}
+
+.profile-tab.logout {
+    background: #8a2c2c;
+}
+
+.profile-tab.logout:hover {
+    background: #a03535;
+}
+.profile-content {
+    flex: 1;
+    background: #242424;
+    border-radius: 10px;
+    padding: 20px;
+}
+
+
+
+
+
 .bet-container.disabled {
     pointer-events: none;
 }
