--- a/css/style.css
+++ b/css/style.css
@@ -607,8 +607,9 @@ main {
 .page-inner {
   max-width: var(--max-width);
   width: 100%;
-  display: grid;
-  grid-template-columns: 1.2fr 1.5fr;
+  display: flex;
+  flex-direction: column;
+  grid-template-columns: 1fr;
   gap: 2.25rem;
   align-items: center;
 }
@@ -851,6 +852,7 @@ main {
 .game-name {
   font-size: 0.9rem;
   font-weight: 550;
+  color: white;
 }
 
 .game-tagline {
